fixes bug "can't scroll on mobile if invisible swipe indicator is tapped first"; increments version for release

--- a/src/main/webapp/public/assets/style/portfolio.css
+++ b/src/main/webapp/public/assets/style/portfolio.css
@@ -66,6 +66,7 @@ label {
     justify-content: space-between;
     opacity: 0;
     padding: 2px 10px;
+    pointer-events: none;
     position: absolute;
     transform: translateX(-50%);
     width: 50%;
